Bug #72899 Change in Bug #69952 broke annotations which was then reverted in Bug #72836, reintroducing the original issue. Add a border-div container and set the z-index there, similar to other assemblies so that the background div displays in the correct stacking order and is not hidden by other elements.

--- a/web/projects/portal/src/app/vsobjects/objects/output/image/vs-image.component.scss
+++ b/web/projects/portal/src/app/vsobjects/objects/output/image/vs-image.component.scss
@@ -61,3 +61,9 @@ div {
   top: 0;
   left: 0;
 }
+
+.border-div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
